--- a/sign_in.html
+++ b/sign_in.html
@@ -13,6 +13,69 @@
 </head>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <nav class="left_nav">
+                <li class="nav_li logo">
+                    <a href="./index.html">
+                        <img src="./styles/IMG/logo.png" width="100%" height="100%" alt="">
+                    </a>
+                </li>
+                <li><a href="./men.html">MEN</a></li>
+                <li><a href="./women.html">WOMEN</a></li>
+                <li><a href="./kids.html">KIDS</a></li>
+                <li><a href="./recent.html">RECENT</a></li>
+                <li><a href="./arrivals.html">ARRIVAL</a></li>
+            </nav>
+            <nav class="right_nav">
+                <li><a href="./log_in.html">LOG IN</a></li>
+                <li><a href="./sign_in.html">SIGN UP</a></li>
+            </nav>
+        </header>
+        <section class="log">
+            <p class="started">Get Started</p>
+            <p class="creat_now">Create your account now</p>
+            <form action="" class="login_form">
+                <label for="full_name">
+                    <p>Full name</p>
+                    <input type="text" name="full_name" id="full_name" class="log_input">
+                </label>
+                <label for="s_email">
+                    <p>Email</p>
+                    <input type="email" id="s_email" class="log_input">
+                </label>
+                <label for="s_password">
+                    <p>Password</p>
+                    <input type="password" id="s_password" class="log_input">
+                </label>
+            </form>
+            <button>
+                SIGN UP
+            </button>
+            <p class="create_account heve_account">Don't have an account? <span><a href="./log_in.html">Login</a></span></p>
+        </section>
+        <footer>
+            <div>
+                <p>Website built by Ngangman Teddy <br> Design taken from dribble</p>
+                <p>login: <a href="https://dribbble.com/shots/21271867-Log-in-page-Untitled-UI" target="_blank">Log
+                        In</a></p>
+                <p>design: <a href="https://dribbble.com/shots/4171131-Nike-Product-Card-Concept">ggghvg</a></p>
+                <p>lading: <a href="https://dribbble.com/shots/15755349/attachments/7560366?mode=media"></a></p>
+                <p>sign up: <a href="https://dribbble.com/shots/20453169-Get-Started-Screen"></a></p>
+            </div>
+            <p>
+                For more interesting contents follow me:
+                <a href="www.linkedin.com/in/n-teddy" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        style="width: 25px; height:25px; background: rgb(0, 38, 132); display:block; margin:0 auto;"
+                        viewBox="0 0 512 512">!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License
+                        - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.
+                        <path fill="#c0bfbf"
+                            d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
+                    </svg>
+                </a>
+            </p>
+        </footer>
+    </main>
 </body>
 </html>
