--- a/log_in.html
+++ b/log_in.html
@@ -15,7 +15,11 @@
     <main class="login_main">
         <header>
             <nav class="left_nav">
-                <li><a href="./index.html">logo</a></li>
+                <li class="nav_li logo">
+                    <a href="./index.html">
+                        <img src="./styles/IMG/logo.png" width="100%" height="100%" alt="">
+                    </a>
+                </li>
                 <li><a href="./men.html">MEN</a></li>
                 <li><a href="./women.html">WOMEN</a></li>
                 <li><a href="./kids.html">KIDS</a></li>
@@ -25,7 +29,7 @@
             <nav class="right_nav">
                  <!-- <input type="text" class="Search_shoe" placeholder="Search"> -->
                 <li><a href="./log_in.html">LOG IN</a></li>
-                <li><a href="#">SIGN UP</a></li>
+                <li><a href="./sign_in.html">SIGN UP</a></li>
             </nav>
         </header>
         <section class="log">
@@ -53,7 +57,7 @@
             <button>
                 Log In with Google
             </button>
-            <p class="create_account">Don't have an account? <span><a href="./">Create account</a></span></p>
+            <p class="create_account">Don't have an account? <span><a href="./sign_in.html">Create account</a></span></p>
         </section>
         <footer>
             <p>Website built by Ngangman Teddy <br> Design taken from dribble</p>
