--- a/recent.html
+++ b/recent.html
@@ -15,7 +15,11 @@
 <main>
     <header>
         <nav class="left_nav">
-            <li><a href="./index.html">logo</a></li>
+            <li class="nav_li logo">
+                <a href="./index.html">
+                    <img src="./styles/IMG/logo.png" width="100%" height="100%" alt="">
+                </a>
+            </li>
             <li><a href="./men.html">MEN</a></li>
             <li><a href="./women.html">WOMEN</a></li>
             <li><a href="./kids.html">KIDS</a></li>
@@ -27,7 +31,7 @@
                 <input type="text" class="Search_shoe" placeholder="Search">
             </li>
             <li><a href="./log_in.html">LOG IN</a></li>
-            <li><a href="#">SIGN UP</a></li>
+            <li><a href="./sign_in.html">SIGN UP</a></li>
         </nav>
     </header>
     <footer>
